--- a/src/red_cards/templates/red_cards/appeal_status.html
+++ b/src/red_cards/templates/red_cards/appeal_status.html
@@ -14,7 +14,6 @@
                     <div class="user-status__value orange-color">NA</div>
                 {% endif %}
             {% if request.user.is_assistant %}
-                {% if appeal.status == appeal.STATUS_NEW or appeal.status == appeal.STATUS_IN_WORK %}
                     {% if appeal.executive %}
                         <span style="color: gray;">{{ appeal.executive.get_full_name }}</span>
                         <span style="color: gray;">{{ appeal.date_assign|date:"d.m.Y"  }}</span>
@@ -29,12 +28,14 @@
                             <input type="hidden" name="action" value="assign" />
                             <button class="btn btn-outline-primary">взять в работу</button>
                         {% else %}
+                            {% if appeal.status != appeal.STATUS_APPROVED and appeal.status != appeal.STATUS_REJECTED %}
                             <input type="hidden" name="action" value="free" />
                             <button class="btn btn-outline-primary">отказаться</button>
+                            {% endif %}
                         {% endif %}
                     </form>
-                {% else %}
-                    <span style="color: gray;">{{ appeal.date_finished|date:"d.m.Y" }}</span>
+                {% if appeal.date_finished %}
+                    <span style="color: gray;">решено: {{ appeal.date_finished|date:"d.m.Y" }}</span>
                 {% endif %}
             {% endif %}
 
