--- a/src/red_cards/templates/red_cards/appeal_list.html
+++ b/src/red_cards/templates/red_cards/appeal_list.html
@@ -13,7 +13,6 @@
 
 
 
-    <form class="" action="" method="get">
     <div class="row align-items-center">
 
       <div class="col-md-2">
@@ -21,6 +20,10 @@
       </div>
     </div>
 
+
+
+
+    <form class="" action="" method="get">
     <div class="row align-items-center">
 <!-- --------------------------------------------------------------------- -->
 
@@ -30,6 +33,7 @@
                 data-live-search="true" style="padding: 0!important;"
                 name="user"
         >
+            <option data-tokens="all-users" {% if user == selected_user %}selected{% endif %}>Показать всех.</option>
             {% for user in all_users %}
                 <option data-tokens="{{ user.leader_id }}" {% if user == selected_user %}selected{% endif %}>L{{ user.leader_id }} {{ user.get_full_name }} ({{ user.count_appeals }})</option>
             {% endfor %}
