--- a/src/red_cards/templates/red_cards/appeal_form.html
+++ b/src/red_cards/templates/red_cards/appeal_form.html
@@ -55,12 +55,25 @@
         </div>
       </div>
     </div>
+
     <form  enctype="multipart/form-data" class="form-event" action="" method="POST">
         {% csrf_token %}
 
       <div class="form-group">
           {{ form.description|attr:"class:form-control form-textarea"  }}
       </div>
+
+      <div class="form-group row">
+
+          <div class="col-md-8"></div>
+              <div class="col-md-4">
+                <div class="form-group">
+{#              {{ filters_form.status.label_tag }}#}
+              {{ form.tag|attr:"class:form-control selectpicker search_block"}}
+                </div>
+            </div>
+      </div>
+
       <div class="form-group">
         <div class="custom-file">
           {{ form.file|attr:"class:custom-file-input" }}
@@ -74,6 +87,8 @@
       </div>
         {{ form.card }}
     </form>
+
+
   </div>
 </div>
 </div>
