fix appeal tag display on detail appeal

--- a/src/red_cards/templates/red_cards/appeal_detail_admin.html
+++ b/src/red_cards/templates/red_cards/appeal_detail_admin.html
@@ -100,7 +100,9 @@
 
     <div class="row align-items-center" >
       <div class="col-md-3">
-        <h4>Апелляция:</h4>
+              <div class="form-group">
+        <h4>Апелляция</h4>
+          </div>
       </div>
 
 
