fix templates selection-page-user-cards.html

--- a/src/red_cards/templates/selection-page-user-cards.html
+++ b/src/red_cards/templates/selection-page-user-cards.html
@@ -153,7 +153,7 @@
                         <div class="event-notice ">
                             <button type="button"
                                     id="deactivate-start-btn-{{ card.uuid }}"
-                                    class="btn btn-outline-info" data-toggle="modal"
+                                    class="btn btn-outline-warning" data-toggle="modal"
                                     data-target="#modal-{{ card.uuid }}">
                               деактивировать
                             </button>
