--- a/src/red_cards/templates/red_cards/appeal_detail_admin.html
+++ b/src/red_cards/templates/red_cards/appeal_detail_admin.html
@@ -241,6 +241,36 @@
       </div>
           {% endfor %}
   </div>
+<script type="text/javascript">
+function AlertFilesize(){
+    if(window.ActiveXObject){
+        var fso = new ActiveXObject("Scripting.FileSystemObject");
+        var filepath = document.getElementById('fileInput').value;
+        var thefile = fso.getFile(filepath);
+        var sizeinbytes = thefile.size;
+    }else{
+        var sizeinbytes = document.getElementById('fileInput').files[0].size;
+    }
+
+    var fSExt = new Array('Bytes', 'KB', 'MB', 'GB');
+    var fSize = sizeinbytes;
+    i=0;
+    while(fSize>900){
+        fSize/=1024;
+        i++;
+    }
+
+    {#console.log(sizeinbytes)#}
+    if( sizeinbytes >= 1024*1024*50){
+        alert(
+            "Выбранный файл слишком большой " +
+            (Math.round(fSize*100)/100)+' '+fSExt[i] +
+                ",\n максимальный размер 50мб"
+        );
+        document.getElementById('fileInput').value = "";
+    }
+}
+</script>
 
 {#{% if appeal.status != appeal.STATUS_APPROVED %}#}
   <div class="section-block__item">
@@ -254,10 +284,11 @@
 
       <div class="form-group">
           {{ comment_form.text|attr:"class:form-control form-textarea"  }}
+                    <span style="color: grey;">*не более 1000 символов</span>
       </div>
       <div class="form-group">
         <div class="custom-file">
-          {{ comment_form.file|attr:"class:custom-file-input" }}
+          {{ comment_form.file|attr:"class:custom-file-input"|attr:"id:fileInput"|attr:"onchange:AlertFilesize();" }}
 
           {{ comment_form.file|add_label_class:"custom-file-label" }}
 
@@ -268,7 +299,24 @@
       </div>
 
     </form>
+<div>
 
+{% if comment_form.errors %}
+    {% for field in comment_form %}
+        {% for error in field.errors %}
+            <div class="alert alert-danger">
+                <strong>{{ field.label_tag }}: {{ error|escape }}</strong>
+            </div>
+        {% endfor %}
+    {% endfor %}
+    {% for error in comment_form.non_field_errors %}
+        <div class="alert alert-danger">
+            <strong>{{ error|escape }}</strong>
+        </div>
+    {% endfor %}
+{% endif %}
+
+</div>
 
 
         </div>
